--- a/admin/frontend/general.html
+++ b/admin/frontend/general.html
@@ -4,12 +4,12 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>General - Admin</title>
-  <link rel="stylesheet" href="../style/admin.css">
+  <link rel="stylesheet" href="./style/admin.css">
 </head>
 <body>
   <div id="root"></div>
   <script type="module">
-    import { me, nav, logout } from '../js/admin-common.js';
+    import { me, nav, logout } from './js/admin-common.js';
     window._logout = logout;
 
     const root = document.getElementById('root');
