--- a/admin/frontend/productos.html
+++ b/admin/frontend/productos.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Productos - Admin</title>
-  <link rel="stylesheet" href="../style/admin.css">
+  <link rel="stylesheet" href="./style/admin.css">
 </head>
 <body>
   <div id="root"></div>
@@ -50,7 +50,7 @@
 
   <!-- Módulo principal (form + tabla + acciones) -->
   <script type="module">
-    import { me, nav, logout } from '../js/admin-common.js';
+    import { me, nav, logout } from './js/admin-common.js';
     window._logout = logout;
 
     const ENDPOINT = `${location.origin}/PROYECTO-FINAL/fronted-mejor/php/backend/controllers/productos.php`;
