--- a/fronted-mejor/calendario.html
+++ b/fronted-mejor/calendario.html
@@ -10,67 +10,74 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
 
   <!-- FullCalendar CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/index.global.min.css" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/main.min.css" rel="stylesheet" />
 
   <!-- Tu CSS existente -->
-<link rel="stylesheet" href="./style/style.css" data-global="true">
+  <link rel="stylesheet" href="./style/style.css" data-global="true" />
 </head>
 
 <body class="pagina-blanca">
- <header>
-  <nav class="navbar">
-    <div class="nav-left">
-      <a href="index.html" title="Logo Inicio" class="js-link nav-logo">
-        <img src="./imagenes/FOTO_2.png" alt="Logo" style="height: 140px; margin-right: 15px;"> 
+
+  <!-- Navbar igual al resto (full-width) -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom sticky-top">
+    <div class="container-fluid px-3">
+      <a class="navbar-brand d-flex align-items-center gap-2" href="index.html">
+        <img src="./imagenes/FOTO_2.png" alt="Mestiza" class="brand-logo" />
       </a>
-      
-      <a href="index.html" title="Inicio" class="js-link nav-text">
-        Inicio
-      </a>
-      
-      <a href="sobre_nosotros.html" title="Sobre Nosotros" class="js-link nav-text">
-        Sobre Nosotros
-      </a>
-      <a href="opiniones.html" title="Opiniones" class="js-link nav-text">
-        Opiniones
-      </a>
-      <a href="menu.html" title="Menú" class="js-link nav-text">
-        Menú
-      </a>
-    </div>
-    <div class="nav-right">
-      <a href="reservas.html" title="Reservas" class="js-link nav-text">
-        Reservas
-      </a>
-      <a href="calendario.html" title="Calendario" class="js-link nav-text">
-        Calendario
-      </a>
+
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav" aria-controls="mainNav"
+        aria-expanded="false" aria-label="Menu">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="mainNav">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
+          <li class="nav-item"><a class="nav-link" href="sobre_nosotros.html">Sobre Nosotros</a></li>
+          <li class="nav-item"><a class="nav-link" href="opiniones.html">Opiniones</a></li>
+          <li class="nav-item"><a class="nav-link" href="menu.html">Menú</a></li>
+        </ul>
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link" href="reservas.html">Reservas</a></li>
+          <li class="nav-item"><a class="nav-link active" href="calendario.html">Calendario</a></li>
+        </ul>
+      </div>
     </div>
   </nav>
-</header>
-</header>
-    <main class="container my-5">
-      <h1 class="text-center card-title">Calendario de Eventos</h1>
-      <div id="calendar"></div>
-    </main>
 
-    <footer>
-      <p>Bazzurro 1747 esq. B. Manton, Colonia Del Sacramento, Colonia, Uruguay 70000</p>
-      <p>+598 98 107 643</p>
-      <p>&copy; 2025 Mestiza Street Food</p>
-      <div class="social-media">
-        <a href="https://www.instagram.com/mestiza_street_food/" target="_blank">
-          <img src="./imagenes/instagram.png" alt="Instagram" class="social-icon">
+  <main class="container py-4">
+    <h1 class="text-center mb-4">Calendario de Eventos</h1>
+
+    <div class="card shadow-sm">
+      <div class="card-body">
+        <div id="calendar" style="min-height: 60vh;"></div>
+      </div>
+    </div>
+  </main>
+
+  <!-- Footer igual al resto -->
+  <footer class="bg-light py-4 mt-5">
+    <div class="container text-center">
+      <p class="mb-1">Bazzurro 1747 esq. B. Manton, Colonia Del Sacramento, Colonia, Uruguay 70000</p>
+      <p class="mb-1">Tel: +598 98 107 643</p>
+      <p class="mb-0 small text-muted">&copy; 2025 Mestiza Street Food</p>
+      <div class="mt-3">
+        <a href="https://www.instagram.com/mestiza_street_food/" target="_blank" rel="noopener" class="me-2">
+          <img src="./imagenes/instagram.png" alt="Instagram" style="height:28px" />
         </a>
-        <a href="https://www.facebook.com/p/mestiza_sabores_caseros-100036866965455/?_rdr" target="_blank">
-          <img src="./imagenes/facebook.png" alt="Facebook" class="social-icon">
+        <a href="https://www.facebook.com/p/mestiza_sabores_caseros-100036866965455/?_rdr" target="_blank" rel="noopener">
+          <img src="./imagenes/facebook.png" alt="Facebook" style="height:28px" />
         </a>
       </div>
-    </footer>
-    <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/index.global.min.js"></script>
+    </div>
+  </footer>
 
-    <script src="js/calendario.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
+  <!-- FullCalendar JS -->
+  <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/index.global.min.js"></script>
+
+  <script src="js/calendario.js"></script>
 </body>
 
 </html>
