--- a/fronted-mejor/estado.html
+++ b/fronted-mejor/estado.html
@@ -104,6 +104,6 @@
 
   <!-- scripts -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="./js/estado.js"></script>
+  <script src="./js/estado.js" defer></script>
 </body>
 </html>
