--- a/fronted-mejor/reservas.html
+++ b/fronted-mejor/reservas.html
@@ -1,128 +1,116 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Reservas</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Reservas - Restaurante Mestiza</title>
 
-<link rel="stylesheet" href="./style/style.css" data-global="true">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="./style/style.css" data-global="true" />
 </head>
-
 <body class="pagina-blanca">
 
-  <body>
-   <header>
-  <nav class="navbar">
-  <div class="nav-left">
-    <a href="index.html" title="Volver al Menú" class="js-link nav-logo">
-      <img 
-        src="./imagenes/FOTO_2.png" 
-        alt="Logo" 
-        style="height: 140px; margin-right: 15px;" 
-      >
-    </a>
-    
-    <a href="index.html" title="Inicio" class="js-link nav-text">
-      Inicio
-    </a>
-    
-    <a href="sobre_nosotros.html" title="Sobre Nosotros" class="js-link nav-text">
-      Sobre Nosotros
-    </a>
-    <a href="opiniones.html" title="Opiniones" class="js-link nav-text">
-      Opiniones
-    </a>
-    <a href="menu.html" title="Menú" class="js-link nav-text">
-      Menú
-    </a>
-  </div>
-  <div class="nav-right">
-    <a href="reservas.html" title="Reservas" class="js-link nav-text">
-      Reservas
-    </a>
-    <a href="calendario.html" title="Calendario" class="js-link nav-text">
-      Calendario
-    </a>
-  </div>
-</nav>
-</header>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <!-- Navbar igual a las demás páginas -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom sticky-top">
+    <div class="container-fluid px-3">
+      <a class="navbar-brand d-flex align-items-center gap-2" href="index.html">
+        <img src="./imagenes/FOTO_2.png" alt="Mestiza" class="brand-logo" />
+      </a>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav"
+              aria-controls="mainNav" aria-expanded="false" aria-label="Menu">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-    <link href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css" rel="stylesheet" />
+      <div class="collapse navbar-collapse" id="mainNav">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
+          <li class="nav-item"><a class="nav-link" href="sobre_nosotros.html">Sobre Nosotros</a></li>
+          <li class="nav-item"><a class="nav-link" href="opiniones.html">Opiniones</a></li>
+          <li class="nav-item"><a class="nav-link" href="menu.html">Menú</a></li>
+        </ul>
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link active" href="reservas.html">Reservas</a></li>
+          <li class="nav-item"><a class="nav-link" href="calendario.html">Calendario</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 
-    <main class="container my-5">
-      <h1 class="text-center mb-4">Reserva tu mesa</h1>
-      <form id="reservaForm" class="mx-auto" style="max-width: 600px;" novalidate>
-        <div class="mb-3">
-          <label for="nombre" class="form-label">Nombre completo</label>
-          <input type="text" class="form-control" id="nombre" placeholder="Tu nombre" required />
-          <div class="invalid-feedback">Por favor, ingresa tu nombre.</div>
+  <main class="container py-4">
+    <h1 class="text-center mb-4">Reserva tu mesa</h1>
+
+    <form id="reservaForm" class="mx-auto" style="max-width: 600px;" novalidate>
+      <div class="mb-3">
+        <label for="nombre" class="form-label">Nombre completo</label>
+        <input type="text" class="form-control" id="nombre" placeholder="Tu nombre" required />
+        <div class="invalid-feedback">Por favor, ingresa tu nombre.</div>
+      </div>
+
+      <div class="mb-3">
+        <label for="telefono" class="form-label">Teléfono</label>
+        <input type="tel" class="form-control" id="telefono" placeholder="Ej: +598 99 123 456" required pattern="[\+0-9\s\-]+" />
+        <div class="invalid-feedback">Por favor, ingresa un teléfono válido.</div>
+      </div>
+
+      <div class="mb-3">
+        <label for="email" class="form-label">Correo electrónico</label>
+        <input type="email" class="form-control" id="email" placeholder="tu@email.com" required />
+        <div class="invalid-feedback">Por favor, ingresa un correo válido.</div>
+      </div>
+
+      <div class="row g-3 mb-3">
+        <div class="col-md-6">
+          <label for="fecha" class="form-label">Fecha</label>
+          <input type="date" class="form-control" id="fecha" required min="" />
+          <div class="invalid-feedback">Selecciona una fecha válida.</div>
         </div>
-
-        <div class="mb-3">
-          <label for="telefono" class="form-label">Teléfono</label>
-          <input type="tel" class="form-control" id="telefono" placeholder="Ej: +598 99 123 456" required
-            pattern="[\+0-9\s\-]+" />
-          <div class="invalid-feedback">Por favor, ingresa un teléfono válido.</div>
-        </div>
-
-        <div class="mb-3">
-          <label for="email" class="form-label">Correo electrónico</label>
-          <input type="email" class="form-control" id="email" placeholder="tu@email.com" required />
-          <div class="invalid-feedback">Por favor, ingresa un correo válido.</div>
-        </div>
-
-        <div class="row g-3 mb-3">
-          <div class="col-md-6">
-            <label for="fecha" class="form-label">Fecha</label>
-            <input type="date" class="form-control" id="fecha" required min="" />
-            <div class="invalid-feedback">Selecciona una fecha válida.</div>
+        <div class="col-md-6">
+          <label for="hora" class="form-label">Hora</label>
+          <div class="input-group">
+            <input type="text" class="form-control" id="hora" placeholder="Selecciona la hora" required />
+            <span class="input-group-text"><i class="bi bi-clock"></i></span>
           </div>
-          <div class="col-md-6">
-            <label for="hora" class="form-label">Hora</label>
-            <div class="input-group">
-              <input type="text" class="form-control" id="hora" placeholder="Selecciona la hora" required />
-              <span class="input-group-text"><i class="bi bi-clock"></i></span>
-            </div>
-            <div class="invalid-feedback">Selecciona una hora.</div>
-          </div>
+          <div class="invalid-feedback">Selecciona una hora.</div>
         </div>
+      </div>
 
-        <div class="mb-3">
-          <label for="personas" class="form-label">Cantidad de personas</label>
-          <input type="number" class="form-control" id="personas" min="1" max="20" value="2" required />
-          <div class="invalid-feedback">Indica cuántas personas serán.</div>
-        </div>
+      <div class="mb-3">
+        <label for="personas" class="form-label">Cantidad de personas</label>
+        <input type="number" class="form-control" id="personas" min="1" max="20" value="2" required />
+        <div class="invalid-feedback">Indica cuántas personas serán.</div>
+      </div>
 
-        <div class="mb-4">
-          <label for="comentarios" class="form-label">Comentarios (opcional)</label>
-          <textarea class="form-control" id="comentarios" rows="3"
-            placeholder="¿Alguna preferencia o requerimiento especial?"></textarea>
-        </div>
+      <div class="mb-4">
+        <label for="comentarios" class="form-label">Comentarios (opcional)</label>
+        <textarea class="form-control" id="comentarios" rows="3" placeholder="¿Alguna preferencia o requerimiento especial?"></textarea>
+      </div>
 
-        <button type="submit" class="btn btn-primary w-100">Enviar reserva</button>
-      </form>
-    </main>
-    <footer>
-      <p>Bazzurro 1747 esq. B. Manton, Colonia Del Sacramento, Colonia, Uruguay 70000</p>
-      <p>+598 98 107 643</p>
-      <p>&copy; 2025 Mestiza Street Food</p>
-      <div class="social-media">
-        <a href="https://www.instagram.com/mestiza_street_food/" target="_blank">
-          <img src="./imagenes/instagram.png" alt="Instagram" class="social-icon">
+      <button type="submit" class="btn btn-primary w-100">Enviar reserva</button>
+    </form>
+  </main>
+
+  <!-- Footer igual al resto -->
+  <footer class="bg-light py-4 mt-5">
+    <div class="container text-center">
+      <p class="mb-1">Bazzurro 1747 esq. B. Manton, Colonia Del Sacramento, Colonia, Uruguay 70000</p>
+      <p class="mb-1">Tel: +598 98 107 643</p>
+      <p class="mb-0 small text-muted">&copy; 2025 Mestiza Street Food</p>
+      <div class="mt-3">
+        <a href="https://www.instagram.com/mestiza_street_food/" target="_blank" rel="noopener" class="me-2">
+          <img src="./imagenes/instagram.png" alt="Instagram" style="height:28px" />
         </a>
-        <a href="https://www.facebook.com/p/mestiza_sabores_caseros-100036866965455/?_rdr" target="_blank">
-          <img src="./imagenes/facebook.png" alt="Facebook" class="social-icon">
+        <a href="https://www.facebook.com/p/mestiza_sabores_caseros-100036866965455/?_rdr" target="_blank" rel="noopener">
+          <img src="./imagenes/facebook.png" alt="Facebook" style="height:28px" />
         </a>
       </div>
-    </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
-    <script src="js/reserva.js"></script>
+    </div>
+  </footer>
 
-  </body>
-
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+  <script src="js/reserva.js"></script>
+</body>
 </html>
