--- a/fronted-mejor/sobre_nosotros.html
+++ b/fronted-mejor/sobre_nosotros.html
@@ -2,45 +2,45 @@
 <html lang="es">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Sobre Nosotros - Restaurante Mestiza</title>
-
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
-
-  <link rel="stylesheet" href="./style/style.css">
+  <link rel="stylesheet" href="./style/style.css" />
 </head>
 
 <body class="pagina-blanca">
 
-  <header>
-   <nav class="navbar">
-  <div class="nav-left">
-    <a href="index.html" title="Volver al Menú" class="js-link nav-logo">
-      <img 
-        src="./imagenes/FOTO_2.png" 
-        alt="Logo" 
-        style="height: 140px; margin-right: 15px;" 
-      >
-    </a>
-    
-    <a href="index.html" title="Inicio" class="js-link nav-text">Inicio</a>
-    <a href="sobre_nosotros.html" title="Sobre Nosotros" class="js-link nav-text">Sobre Nosotros</a>
-    <a href="opiniones.html" title="Opiniones" class="js-link nav-text">Opiniones</a>
-    <a href="menu.html" title="Menú" class="js-link nav-text">Menú</a>
-  </div>
-  <div class="nav-right">
-    <a href="reservas.html" title="Reservas" class="js-link nav-text">Reservas</a>
-    <a href="calendario.html" title="Calendario" class="js-link nav-text">Calendario</a>
-  </div>
-</nav>
-  </header>
+  <!-- Navbar igual a Inicio (full-width) -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom sticky-top">
+    <div class="container-fluid px-3">
+      <a class="navbar-brand d-flex align-items-center gap-2" href="index.html">
+        <img src="./imagenes/FOTO_2.png" alt="Mestiza" class="brand-logo" />
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav" aria-controls="mainNav"
+        aria-expanded="false" aria-label="Menu">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-  <main class="container py-5 mt-5">
+      <div class="collapse navbar-collapse" id="mainNav">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
+          <li class="nav-item"><a class="nav-link active" href="sobre_nosotros.html">Sobre Nosotros</a></li>
+          <li class="nav-item"><a class="nav-link" href="opiniones.html">Opiniones</a></li>
+          <li class="nav-item"><a class="nav-link" href="menu.html">Menú</a></li>
+        </ul>
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link" href="reservas.html">Reservas</a></li>
+          <li class="nav-item"><a class="nav-link" href="calendario.html">Calendario</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 
+  <main class="container py-4">
     <section class="text-center mb-5">
-      <div class="row align-items-center mb-5 gx-5">
-        <div class="col-md-6 mb-4 mb-md-0">
+      <div class="row align-items-center mb-5 gx-4">
+        <div class="col-md-6 mb-4 mb-md-0 text-start">
           <h2 class="h3 fw-bold mb-3 titulo-degrade">Un Sueño Nacido en 2020</h2>
           <p>
             Mestiza Sabores Caseros nació en Colonia del Sacramento en plena pandemia de 2020, cuando Daniel Abbona y su
@@ -51,21 +51,19 @@
           <p>
             Nuestro diferencial está en la artesanía y el corazón familiar que ponemos en cada plato. Elaboramos todo
             nosotros mismos: desde las tortillas y encurtidos hasta las salsas picantes y aderezos que acompañan
-            nuestros
-            tacos, smash burgers, bocatas y opciones vegetarianas y veganas. Cada bocado busca mantener un sabor único,
+            nuestros tacos, smash burgers, bocatas y opciones vegetarianas y veganas. Cada bocado busca mantener un sabor único,
             constante y reconocible, que represente quiénes somos.
           </p>
         </div>
         <div class="col-md-6">
-          <img src="./imagenes/inicio.heic" alt="Mesita de feria y puesto inicial de Mestiza"
-            class="img-fluid rounded shadow-lg">
+          <img src="./imagenes/inicio.heic" alt="Mesita de feria y puesto inicial de Mestiza" class="img-fluid rounded shadow-lg">
         </div>
       </div>
 
       <hr class="my-5">
 
-      <div class="row align-items-center mb-5 gx-5">
-        <div class="col-md-6 order-md-2 mb-4 mb-md-0">
+      <div class="row align-items-center mb-5 gx-4">
+        <div class="col-md-6 order-md-2 mb-4 mb-md-0 text-start">
           <h2 class="h3 fw-bold mb-3 titulo-degrade">El Primer Food Truck de Colonia</h2>
           <p>
             De la feria y la rambla pasamos a tener nuestro propio food truck, el primero en Colonia, que nos permitió
@@ -74,8 +72,7 @@
           </p>
           <p>
             Hoy seguimos recorriendo ferias gastronómicas y cerveceras, ofreciendo delivery cuando no estamos en
-            eventos,
-            y acompañando también a familias, amigos y empresas en celebraciones privadas.
+            eventos, y acompañando también a familias, amigos y empresas en celebraciones privadas.
           </p>
         </div>
         <div class="col-md-6 order-md-1">
@@ -93,12 +90,10 @@
             simple para convertirse en un lugar de encuentro y disfrute.
           </p>
           <img src="./imagenes/compartiendo.png" alt="Mesa de clientes compartiendo comida"
-            class="img-fluid rounded shadow-lg mt-4" style="max-height: 400px; object-fit: cover;">
+               class="img-fluid rounded shadow-lg mt-4" style="max-height: 400px; object-fit: cover;">
         </div>
       </div>
-
-      <hr class="my-5">
-
+    </section>
   </main>
 
   <section class="mapa-ubicacion">
@@ -115,17 +110,20 @@
     </div>
   </section>
 
-  <footer>
-    <p>Bazzurro 1747 esq. B. Manton, Colonia Del Sacramento, Colonia, Uruguay 70000</p>
-    <p>+598 98 107 643</p>
-    <p>&copy; 2025 Mestiza Street Food</p>
-    <div class="social-media">
-      <a href="https://www.instagram.com/mestiza_street_food/" target="_blank">
-        <img src="./imagenes/instagram.png" alt="Instagram" class="social-icon">
-      </a>
-      <a href="https://www.facebook.com/p/mestiza_sabores_caseros-100036866965455/?_rdr" target="_blank">
-        <img src="./imagenes/facebook.png" alt="Facebook" class="social-icon">
-      </a>
+  <!-- Footer igual a Inicio -->
+  <footer class="bg-light py-4 mt-5">
+    <div class="container text-center">
+      <p class="mb-1">Bazzurro 1747 esq. B. Manton, Colonia Del Sacramento, Colonia, Uruguay 70000</p>
+      <p class="mb-1">Tel: +598 98 107 643</p>
+      <p class="mb-0 small text-muted">&copy; 2025 Mestiza Street Food</p>
+      <div class="mt-3">
+        <a href="https://www.instagram.com/mestiza_street_food/" target="_blank" rel="noopener" class="me-2">
+          <img src="./imagenes/instagram.png" alt="Instagram" style="height:28px" />
+        </a>
+        <a href="https://www.facebook.com/p/mestiza_sabores_caseros-100036866965455/?_rdr" target="_blank" rel="noopener">
+          <img src="./imagenes/facebook.png" alt="Facebook" style="height:28px" />
+        </a>
+      </div>
     </div>
   </footer>
 
